# led_strip

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  led_strip  led_strip-cpp-implementation.h  led_strip-cpp.h  led_strip.c  led_strip.h  led_strip_linux_spi_backend.c  led_strip_linux_spi_backend.h  led_strip_no_backend.c  led_strip_no_backend.h  led_strip_struct.h  led_strip_test.c
arduino/: createArduinoLibrary.sh  keywords.txt
arduino/examples/rainbow/: rainbow.ino
led_strip_arduino_test/: led_strip_arduino_spi_backend.cpp  led_strip_arduino_spi_backend.h  led_strip_arduino_test.ino  setup.sh
linux/: CMakeLists.txt  led_strip_linux_spi_backend.h
linux/examples/: CMakeLists.txt  led_strip_linux_spi_example.c
src/: CMakeLists.txt  led_strip.h  led_strip_no_backend.c  led_strip_no_backend.h
